--- a/.github/workflows/node.yml
+++ b/.github/workflows/node.yml
@@ -26,4 +26,4 @@ jobs:
           node-version: ${{ matrix.node-version }}
       - run: npm i
       - run: npm run build --if-present
-      # - run: npm test
+      - run: pm2 restart DeployApp
